tests/selenium_tests/playwright-log-1743091909202103000.txt
node:internal/modules/cjs/loader:1247
  throw err;
  ^

Error: Cannot find module 'google-protobuf'
Require stack:
- C:\KOULU\Koodi\Projekti_WEBDEV-2\.venv\Lib\site-packages\Browser\wrapper\index.js
    at Function._resolveFilename (node:internal/modules/cjs/loader:1244:15)
    at Function._load (node:internal/modules/cjs/loader:1070:27)
    at TracingChannel.traceSync (node:diagnostics_channel:322:14)
    at wrapModuleLoad (node:internal/modules/cjs/loader:217:24)
    at Module.require (node:internal/modules/cjs/loader:1335:12)
    at require (node:internal/modules/helpers:136:16)
    at node/playwright-wrapper/generated/playwright_pb.js (C:\KOULU\Koodi\Projekti_WEBDEV-2\.venv\Lib\site-packages\Browser\wrapper\index.js:40:16)
    at __require (C:\KOULU\Koodi\Projekti_WEBDEV-2\.venv\Lib\site-packages\Browser\wrapper\index.js:9:50)
    at Object.<anonymous> (C:\KOULU\Koodi\Projekti_WEBDEV-2\.venv\Lib\site-packages\Browser\wrapper\index.js:10566:36)
    at Module._compile (node:internal/modules/cjs/loader:1562:14) {
  code: 'MODULE_NOT_FOUND',
  requireStack: [
    'C:\\KOULU\\Koodi\\Projekti_WEBDEV-2\\.venv\\Lib\\site-packages\\Browser\\wrapper\\index.js'
  ]
}

Node.js v22.13.0
